; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libiosuhax/extr_iosuhax.c_IOSUHAX_FSA_WriteFile.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libiosuhax/extr_iosuhax.c_IOSUHAX_FSA_WriteFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@iosuhaxHandle = common dso_local global i64 0, align 8
@IOCTL_FSA_WRITEFILE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IOSUHAX_FSA_WriteFile(i32 %0, i8* %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  store i32 %0, i32* %8, align 4
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %19 = load i64, i64* @iosuhaxHandle, align 8
  %20 = icmp slt i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %6
  %22 = load i64, i64* @iosuhaxHandle, align 8
  %23 = trunc i64 %22 to i32
  store i32 %23, i32* %7, align 4
  br label %82

24:                                               ; preds = %6
  %25 = load i8*, i8** %9, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %28, label %27

27:                                               ; preds = %24
  store i32 -1, i32* %7, align 4
  br label %82

28:                                               ; preds = %24
  store i32 5, i32* %14, align 4
  %29 = load i32, i32* %10, align 4
  %30 = load i32, i32* %11, align 4
  %31 = mul nsw i32 %29, %30
  %32 = sext i32 %31 to i64
  %33 = add i64 20, %32
  %34 = add i64 %33, 64
  %35 = add i64 %34, 63
  %36 = and i64 %35, -64
  %37 = trunc i64 %36 to i32
  store i32 %37, i32* %15, align 4
  %38 = load i32, i32* %15, align 4
  %39 = call i64 @memalign(i32 32, i32 %38)
  %40 = inttoptr i64 %39 to i32*
  store i32* %40, i32** %16, align 8
  %41 = load i32*, i32** %16, align 8
  %42 = icmp ne i32* %41, null
  br i1 %42, label %44, label %43

43:                                               ; preds = %28
  store i32 -2, i32* %7, align 4
  br label %82

44:                                               ; preds = %28
  %45 = load i32, i32* %8, align 4
  %46 = load i32*, i32** %16, align 8
  %47 = getelementptr inbounds i32, i32* %46, i64 0
  store i32 %45, i32* %47, align 4
  %48 = load i32, i32* %10, align 4
  %49 = load i32*, i32** %16, align 8
  %50 = getelementptr inbounds i32, i32* %49, i64 1
  store i32 %48, i32* %50, align 4
  %51 = load i32, i32* %11, align 4
  %52 = load i32*, i32** %16, align 8
  %53 = getelementptr inbounds i32, i32* %52, i64 2
  store i32 %51, i32* %53, align 4
  %54 = load i32, i32* %12, align 4
  %55 = load i32*, i32** %16, align 8
  %56 = getelementptr inbounds i32, i32* %55, i64 3
  store i32 %54, i32* %56, align 4
  %57 = load i32, i32* %13, align 4
  %58 = load i32*, i32** %16, align 8
  %59 = getelementptr inbounds i32, i32* %58, i64 4
  store i32 %57, i32* %59, align 4
  %60 = load i32*, i32** %16, align 8
  %61 = getelementptr inbounds i32, i32* %60, i64 64
  %62 = load i8*, i8** %9, align 8
  %63 = load i32, i32* %10, align 4
  %64 = load i32, i32* %11, align 4
  %65 = mul nsw i32 %63, %64
  %66 = call i32 @memcpy(i32* %61, i8* %62, i32 %65)
  %67 = load i64, i64* @iosuhaxHandle, align 8
  %68 = load i32, i32* @IOCTL_FSA_WRITEFILE, align 4
  %69 = load i32*, i32** %16, align 8
  %70 = load i32, i32* %15, align 4
  %71 = call i32 @IOS_Ioctl(i64 %67, i32 %68, i32* %69, i32 %70, i32* %17, i32 4)
  store i32 %71, i32* %18, align 4
  %72 = load i32, i32* %18, align 4
  %73 = icmp slt i32 %72, 0
  br i1 %73, label %74, label %78

74:                                               ; preds = %44
  %75 = load i32*, i32** %16, align 8
  %76 = call i32 @free(i32* %75)
  %77 = load i32, i32* %18, align 4
  store i32 %77, i32* %7, align 4
  br label %82

78:                                               ; preds = %44
  %79 = load i32*, i32** %16, align 8
  %80 = call i32 @free(i32* %79)
  %81 = load i32, i32* %17, align 4
  store i32 %81, i32* %7, align 4
  br label %82

82:                                               ; preds = %78, %74, %43, %27, %21
  %83 = load i32, i32* %7, align 4
  ret i32 %83
}

declare dso_local i64 @memalign(i32, i32) #1

declare dso_local i32 @memcpy(i32*, i8*, i32) #1

declare dso_local i32 @IOS_Ioctl(i64, i32, i32*, i32, i32*, i32) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
